apps/atuin/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
spec:
  selector:
    matchLabels:
      app: atuin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: atuin
        tags.datadoghq.com/env: homelab
        tags.datadoghq.com/service: atuin
        tags.datadoghq.com/version: v1
    spec:
      containers:
      - name: atuin
        image: ghcr.io/atuinsh/atuin:v18.6.1
        command: ["/bin/sh", "-c", "export ATUIN_DB_URI=\"postgresql://atuin:${DB_PASSWORD}@atuin-database-rw.atuin.svc.cluster.local/atuin\" && exec atuin server start --host 0.0.0.0 --port 8888"]
        ports:
        - name: http
          containerPort: 8888
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
