apps/atuin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
spec:
  selector:
    app: atuin
  ports:
  - name: http
    port: 80
    targetPort: 8888
